--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ ACCESS_TOKEN_SECRET=KVADDER_LESSON98
 REFRESH_TOKEN_SECRET=KVADDER_LESSON98
 REGISTER_TOKEN_SECRET=REGISTER_TOKEN_SECRET
 
-FRONT_URL = http://localhost:5173
+FRONT_URL = http://78.155.194.209:5173
 
 PORT = 3000
 
