--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ PORT = 3000
 
 ROOT_LOGIN = kvadder
 ROOT_PASSWORD = Zsxdcf123
+
+TINKOFF_PASSWORD=w1qidt35it9poqvl
+TINKOFF_KEY=1666008189392
+INIT_PAYMENT=https://securepay.tinkoff.ru/v2/Init
